--- a/bio.html
+++ b/bio.html
@@ -21,14 +21,14 @@
     <!-- GOOGLE ANALYTICS-->
 
     <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-51657413-3', 'auto');
-    ga('send', 'pageview');
-  </script>
+      ga('create', 'UA-51657413-3', 'auto');
+      ga('send', 'pageview');
+    </script>
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -65,24 +65,22 @@
 
     <div class="col-md-6 portfolio-item right-column">
       <p class="info">
-         I'm currently a PhD student with the Machine Learning Research Group at the University of Oxford,
-         where I study as a Rhodes Scholar. I'm also a several-time entrepreneur. I believe in using
-         technology and business to solve the world's toughest challenges.
-      </p>
+         Logan Graham is a PhD student with the Machine Learning Research Group at the University of Oxford, where he studies as a Rhodes Scholar.
+         He is currently working on counterfactual estimation from time series as well as faster environment-aware Bayesian optimisation.
+         He has also worked on predicting the automatability of work and the future of job demand.
+         He is co-supervised by Dr. Michael Osborne and Dr. Carl Benedikt Frey.
+       </p>
 
-      <p class = "info">
-        I research how we can improve <b>machine learning</b> with tools from
-        <b>causality</b> and economics. I'm specifically interested in how we can
-        use experimentation, object-relation reasoning, and structural
-        equation modelling to create more efficient and generalizable intelligence.
-        <a href='/papers'>I curate interesting papers here</a> – you might like them.
+       <p class='info'> At Oxford, Logan co-founded the <a href='http://www.rhodeslab.com'>Rhodes Artificial Intelligence Lab</a> (RAIL), an applied machine learning lab for solving global social challenges.
+       RAIL has worked on predicting medical disorders in South Africa and the United States, generating new drug candidates targeting anti-microbial resistance, risk-prioritizing homelessness for a major American city, identifying toxic online conversation, predicting the future of the UK job market for the UK government, and more.
+       </p>
 
-      </p>
+       <p class='info'> Prior to Oxford, Logan helped launch <a href='http://www.awakelabs.com'>Awake Labs</a>, co-founded <a href='yunusandyouth.com'>Yunus&Youth</a>, was a data science fellow at Zipfian Academy, and conducted research in computational economics.
+       When he was 7, Logan co-founded the Children's Arthritis Foundation and raised $150,000+ advocating for children with rheumatoid diseases.
+       </p>
+  
+      <p>He holds a BA (Hons) in economics from the University of British Columbia.</p>
 
-      <p class = "info">
-        I also research:
-        30 years from now, how many of our jobs will be automated, why, and what new industries
-        will automation create?
       </p>
 
       <p class="info">
