remove bio chaff

--- a/bio.html
+++ b/bio.html
@@ -79,27 +79,7 @@
        When he was 7, Logan co-founded the Children's Arthritis Foundation and raised $150,000+ advocating for children with rheumatoid diseases.
        </p>
   
-      <p>He holds a BA (Hons) in economics from the University of British Columbia.</p>
-
-      </p>
-
-      <p class="info">
-        I'm an entrepreneur, salsa dancer, and rower. I currently run
-        <a href="http://www.rhodeslab.com" title="We use AI to solve important, global social problems" data-toggle="tooltip" data-placement="top">RAIL, the Rhodes Artificial Intelligence Lab.</a> I launched
-        <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top">a biotech startup</a>,
-        a
-        <a href="http://www.yunusandyouth.com" title="A global fellowship for superstar young social entrepreneurs" data-toggle="tooltip" data-placement="top">fellowship for social entrepreneurs</a>,
-        and worked for a long time to help
-        <a href="http://www.awesomeitis.com" title="An online patient-to-patient mentoring platform, starting with Arthritis" data-toggle="tooltip" data-placement="top">kids with Arthritis.</a>
-      </p>
-
-      <p class="info">
-        <a href="/blog" class="read-more">I write some things here →</a>
-      </p>
-
-      <p class="info">
-        Here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
-      </p>
+      <p class='info'>He holds a BA (Hons) in economics from the University of British Columbia.</p>
     </div>
 
 
