--- a/bio.html
+++ b/bio.html
@@ -42,6 +42,7 @@
 
 </head>
 <body>
+  <div w3-include-html="header_index.html"></div>
   <div class="row main-content container">
     <div class="container inner-content">
       <div class="col-md-5 portfolio-item left-column">
@@ -66,13 +67,13 @@
     <div class="col-md-6 portfolio-item right-column">
       <p class="info">
          Logan Graham is a PhD student with the Machine Learning Research Group at the University of Oxford, where he studies as a Rhodes Scholar.
-         He is currently working on counterfactual estimation from time series as well as faster environment-aware Bayesian optimisation.
-         He has also worked on predicting the automatability of work and the future of job demand.
-         He is co-supervised by Dr. Michael Osborne and Dr. Carl Benedikt Frey.
+         He is currently working on causality and interpretability in machine learning.
+         He has also worked on predicting the automatability of work and the future of job demand, and the intersection of computational intelligence and economics.
+         He is supervised by Dr. Michael Osborne and Dr. Carl Benedikt Frey.
        </p>
 
-       <p class='info'> At Oxford, Logan co-founded the <a href='http://www.rhodeslab.com'>Rhodes Artificial Intelligence Lab</a> (RAIL), an applied machine learning lab for solving global social challenges.
-       RAIL has worked on predicting medical disorders in South Africa and the United States, generating new drug candidates targeting anti-microbial resistance, risk-prioritizing homelessness for a major American city, identifying toxic online conversation, predicting the future of the UK job market for the UK government, and more.
+       <p class='info'>
+        Logan was an <a href="http://www.x.company">AI resident at X</a>, Google's sister semi-secretive "moonshot" R&D facility, and is currently a research intern at <a href="http://www.babylonhealth.com">Babylon Health</a>. At Oxford, Logan co-founded the <a href='http://www.rhodeslab.com'>Rhodes Artificial Intelligence Lab</a> (RAIL), an applied machine learning lab for solving global social challenges. RAIL has worked on predicting medical disorders in South Africa and the United States, generating new drug candidates targeting anti-microbial resistance, risk-prioritizing homelessness for a major American city, identifying toxic online conversation, predicting the future of the UK job market for the UK government, and more.
        </p>
 
        <p class='info'> Prior to Oxford, Logan helped launch <a href='http://www.awakelabs.com'>Awake Labs</a>, co-founded <a href='yunusandyouth.com'>Yunus&Youth</a>, was a data science fellow at Zipfian Academy, and conducted research in computational economics.
